--- a/v/css/style.css
+++ b/v/css/style.css
@@ -45,6 +45,10 @@ a:hover {
     text-decoration: none;
     color: #aeb2b7;
     font-size: 130%;
+    margin: 0px;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .nav li {
@@ -127,14 +131,12 @@ section {
     color: black;
     text-decoration: none;
     border-bottom: 1px solid grey;
-    padding-bottom: 10px;
 }
 
 .documentation section a:visited {
     color: black;
     text-decoration: none;
     border-bottom: 1px solid grey;
-    padding-bottom: 10px;
 }
 
 .documentation section .img {
