--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,84 @@
 .container {
     width: 100%;
     height: 100%;
+    background-color: #333;
 }
+
 .release,
 .beta,
 .alpha {
-    width: 100%;
-    height: 200px;
+    width: 98%;
+    height: 240px;
+    margin-left: 1% !important;
+    margin-right: 1% !important;
 }
+
 h1 {
-    text-align: center;
+    text-align: center !important;
+    font-size: 3em !important;
+    color: white;
+    margin-bottom: 10px !important;
+    padding-top: 2px !important;
 }
+
+h2 {
+    font-size: 2em !important;
+    color: white;
+    margin-bottom: 20px !important;
+}
+
 .boxr,
 .boxb,
 .boxa {
-    border-width: 6px;
-    border-style: double;
+    border-width: 3px !important;
+    border-style: dotted!important;
+    border-color: white;
     height: 130px;
     background-color: #333;
-    overflow: auto;
-    white-space: nowrap;
+    overflow: auto !important;
+    white-space: nowrap !important;
+    padding: 10px;
 }
+
 a {
     border-width: 2px;
     border-style: solid;
     width: 150px;
     height: 100px;
-    float: left;
-    margin-right: 20px;
-    padding: 2px;
+    margin-right: 20px !important;
+    padding: 2px !important;
     list-style: none;
-    line-height: 100px;
+    line-height: 100px !important;
     text-align: center;
-    font-size: 3em;
+    font-size: 3em !important;
     display: inline-block;
     color: white;
-    text-decoration: none;
+    text-decoration: none !important;
 }
+
 .boxr a {
     background-color: #4CAF50;
 }
+
 .boxb a {
     background-color: #FF9800;
 }
+
 .boxa a {
     background-color: #FF4336;
 }
+::-webkit-scrollbar
+{
+  width: 12px;
+  height: 12px;
+}
 
+::-webkit-scrollbar-track
+{
+  background: #A7A7A9;
+}
 
-
-
-
-
-
-
+::-webkit-scrollbar-thumb
+{
+  background: #797270;
+}
