--- a/v/css/style.css
+++ b/v/css/style.css
@@ -62,6 +62,11 @@ a:hover {
     transition: background 0.2s;
 }
 
+.small {
+    padding-left: 40px !important;
+    font-size: 80% !important;
+}
+
 .nav li:hover {
     background: rgba(255, 255, 255, 0.2);
 }
@@ -231,7 +236,7 @@ table {
     border-radius: 3px;
     border-collapse: collapse;
     padding: 5px;
-    max-width: 100%;
+    width: 100%;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     animation: float 5s infinite;
 }
