--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 .container {
     width: 100%;
     height: 100%;
     background-color: #333;
+    font-family: 'Raleway', sans-serif;
 }
 
 .release,
@@ -15,10 +17,10 @@
 
 h1 {
     text-align: center !important;
-    font-size: 3em !important;
+    font-size: 4em !important;
     color: white;
     margin-bottom: 10px !important;
-    padding-top: 2px !important;
+    padding-top: 20px !important;
 }
 
 h2 {
@@ -30,10 +32,9 @@ h2 {
 .boxr,
 .boxb,
 .boxa {
-    border-width: 3px !important;
-    border-style: dotted!important;
-    border-color: white;
-    height: 130px;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: #3c3c3c;
     background-color: #333;
     overflow: auto !important;
     white-space: nowrap !important;
