--- a/css/style.css
+++ b/css/style.css
@@ -68,18 +68,34 @@ a {
 .boxa a {
     background-color: #FF4336;
 }
-::-webkit-scrollbar
-{
-  width: 12px;
-  height: 12px;
+
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
 }
 
-::-webkit-scrollbar-track
-{
-  background: #A7A7A9;
+::-webkit-scrollbar-track {
+    background: #A7A7A9;
 }
 
-::-webkit-scrollbar-thumb
-{
-  background: #797270;
+::-webkit-scrollbar-thumb {
+    background: #797270;
+}
+
+.footer {
+    width: 100%;
+    font-size: 150%;
+    color: white;
+    height: 5%;
+    background-color: #2D3438;
+}
+
+.git,
+.imp,
+.credit {
+    width: calc(100%/3);
+    float: left;
+    text-align: center;
+    background-color: #2D3438;
+    margin-top: 0.5%;
 }
