--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,12 @@
 .container {
     width: 100%;
     height: 100%;
-    background-color: #333;
+    background-color: #2D3438;
     font-family: 'Raleway', sans-serif;
 }
-
+.subcontainer {
+    height: 94.9%;
+}
 .release,
 .beta,
 .alpha {
@@ -35,13 +37,13 @@ h2 {
     border-width: 1px !important;
     border-style: solid !important;
     border-color: #3c3c3c;
-    background-color: #333;
+    background-color: #2D3438;
     overflow: auto !important;
     white-space: nowrap !important;
     padding: 10px;
 }
 
-a {
+.subcontainer a {
     border-width: 2px;
     border-style: solid;
     width: 150px;
@@ -83,19 +85,23 @@ a {
 }
 
 .footer {
-    width: 100%;
-    font-size: 150%;
-    color: white;
-    height: 5%;
-    background-color: #2D3438;
+    width: 100% !important;
+    font-size: 150% !important;
+    color: white !important;
+    height: 5% !important;
+    background-color: #2D3438 !important;
+    border-top: 1px black solid;
 }
-
+.footer a {
+    text-decoration: none;
+    color: white;
+}
 .git,
 .imp,
 .credit {
-    width: calc(100%/3);
-    float: left;
-    text-align: center;
-    background-color: #2D3438;
-    margin-top: 0.5%;
+    width: calc(100%/3) !important;
+    float: left !important;
+    text-align: center !important;
+    background-color: #2D3438 !important;
+    margin-top: 0.5% !important;
 }
