--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+
+
+/*@import url('https://fonts.googleapis.com/css?family=Raleway');
 .container {
     width: 100%;
     height: 100%;
@@ -104,4 +106,4 @@ h2 {
     text-align: center !important;
     background-color: #2D3438 !important;
     margin-top: 0.5% !important;
-}
+}*/
